# Sentiment-Analysis

./: README.md  main.py  pyproject.toml
models/: finalized_tokenizer.sav
src/: .~lock.Tweets.csv#  IMDB.ipynb  IMDB.py  Tweets2.csv  main.ipynb  sentiment_analysis_2_class.ipynb  sentiment_analysis_3_class.ipynb
templates/: index.html
