[tool.poetry]
name = "archive"
version = "0.1.0"
description = ""
authors = ["codewithrafiq <codewithrafiq@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
tensorflow = "^2.9.1"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
autopep8 = "^1.6.0"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
